third_party/blink/renderer/core/layout/ng/list/layout_ng_list_marker_image.h
@@ -21,7 +21,7 @@ class CORE_EXPORT LayoutNGListMarkerImage final : public LayoutImage {
   bool IsOfType(LayoutObjectType) const override;
 
   void ComputeSVGIntrinsicSizingInfoByDefaultSize(IntrinsicSizingInfo&) const;
-  bool GetNestedIntrinsicSizingInfo(IntrinsicSizingInfo&) const final;
+  void ComputeIntrinsicSizingInfo(IntrinsicSizingInfo&) const final;
 };
 
 DEFINE_LAYOUT_OBJECT_TYPE_CASTS(LayoutNGListMarkerImage,
